2003-12-26  Martin Mares  <mj@ucw.cz>

	* Makefile (MANDIR): Use `:=' instead of `=' to avoid executing the shell
	command every time $(MANDIR) is referenced.

	* lspci.c (main): The error message for `lspci -s' incorrectly mentioned
	a `-f' switch. Reported by Steve Finney <Steve.Finney@SpirentCom.COM>.

	* lib/generic.c: Removed memory leak in pci_generic_bus_scan().
	Reported by Gary Parnes <gary_parnes@terago.com>.

	* Replaced obsolete syntax of __attribute__((unused)) in the middle of
	parameter declarations (which is no longer supported by GCC 3.1) by the
	current syntax (attribute at the end). Thanks to pixel@mandrakesoft.com
	for reporting this problem.

	* Removed CVS $Id$ tags from all files.

	* Makefile: Added some more warnings.

2003-11-29  Martin Mares  <mj@ucw.cz>

	* Imported the pciutils sources to my Arch repository. Good-bye, CVS.

2003-01-04  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.11.

	* Makefile: Changed configuration of installation directories --
	all paths are now set at the top of the Makefile instead of being
	scattered between the installation rules. The default installation
	now goes always to /usr/local regardless of the OS as most distributions
	already contain some version of pciutils and we don't want custom
	installations to interfere with the default ones.

	* Makefile: Removed a couple of ancient install hacks: we no longer
	try to avoid overwriting a newer pci.ids file (users are now expected
	to use update-ids) and we don't try to remove /etc/pci.ids (a long time
	has passed since the last version which used it).

	* Makefile: Paths to pci.ids in man pages automatically get the right path.

	* Added the update-ids utility.

	* lib: Removed partially implemented "syscall" access method which will
	probably never be needed.

2002-12-27  Martin Mares  <mj@ucw.cz>

	* lib/nbsd-libpci.c: Cleaned up and hopefully made it endian safe.

	* lib/generic.c (pci_generic_scan_bus): Added work-around for devices with